--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h2 id="text"><span>Welcome to</span><br />Lakshdweep</h2>
       <img src="/img/bird1.png"  id="bird1" alt="">
       <img src="/img/bird2.png"  id="bird2" alt="">
-      <img src="/img/forest.png"  id="forest" alt="">
+      <img src="img/forest.png"  id="forest" alt="">
       <a href="" id="btn">Explore</a>
       <img src="/img/rocks.png"  id="rocks" alt="">
       <img src="/img/water.png"  id="water" alt="">
